\name{NEWS}
\title{NEWS file for the gCMAPWeb package}

\section{Changes in version 1.1.6}{
  \itemize{
  \item{UPDATE}{gCMAPWeb now issues an error when javascript is not available in the browser.}
}
}

\section{Changes in version 1.1.2}{
  \itemize{
 \item{NEW: }{Added tutorial as a new vignette.}
}
}
\section{Changes in version 1.1.1}{
  \itemize{
 \item{BUGFIX: }{Heatmaps are now displayed for results of directional query.}
}
}